<resources>
    <string name="app_name">SyncPlayer</string>
    <string name="primary_mode">MODO PRIMÁRIO</string>
    <string name="secondary_mode">MODO SECUNDÁRIO</string>
    <string name="primary_mode_slogan">Reproduza conteúdo para uma experiência coletiva</string>
    <string name="secondary_mode_slogan">Receba conteúdo personalizado para uma experiência diferenciada</string>
    <string name="action_menu">menu</string>
    <string name="leave_primary_mode">Sair do modo primário</string>
    <string name="leave_secondary_mode">Sair do modo secundário</string>
    <string name="settings">Configurações</string>
    <string name="historic_item">Histórico</string>
    <string name="error_parsing">Erro ao analisar documento</string>
    <string name="reading_document">Lendo documento</string>
    <string name="Looking_primary_device">Buscando por dispositivos primários</string>
    <string name="error_found_discover">Falha ao buscar dispositivos primários</string>
    <string name="service_lost">Conexao perdida</string>
    <string name="read_permission_necessary">Permissão necessária para realizar a leitura das mídias</string>
    <string name="write_permission_necessary">Permissão necessária para fazer download das mídias</string>
    <string name="start">Iniciar</string>
    <string name="media_type_invalid">Tipo de mídia inválida</string>
    <string name="choice_group">Escolha o Grupo</string>
    <string name="downloading_medias">Realizando download das mídias</string>
    <string name="downloading_content_application">Realizando download do conteúdo da aplicação</string>
    <string name="waiting_content">Aguardando conteúdo</string>
    <string name="waiting_begin">Aguardando início</string>
    <string name="close_player">Fechar player</string>
    <string name="searching_apps">Buscando Aplicações</string>
    <string name="use_local_app">Utilizar aplicação local</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="image">Imagem</string>
    <string name="video">Vídeo</string>
    <string name="supported_medias">Mídias suportadas</string>
    <string name="jpeg">jpeg</string>
    <string name="png">png</string>
    <string name="mpeg4">mpeg4</string>
    <string name="_3gp">3gp</string>
    <string name="mov">mov</string>
    <string name="mpeg3">mpeg3</string>
    <string name="wav">wav</string>
    <string name="audio">audio</string>
    <string name="others">Outros</string>
    <string name="app">aplicação</string>
</resources>
