<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lmd.thomas.syncplayer.ui.mode.ModeActivity"
    android:orientation="vertical"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@color/material_green_a200">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:src="@drawable/ic_television"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="16dp"
            android:text="@string/primary_mode_slogan"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/primaryModeButton"
            android:text="@string/primary_mode"
            android:textColor="@color/white"
            android:layout_margin="16dp"
            android:onClick="onClickButton"
            android:tag="@string/primary_mode"
            android:theme="@style/MyButtonGreen" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@color/material_blue_a200">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:src="@drawable/ic_smartphone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="16dp"
            android:text="@string/secondary_mode_slogan"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/secondaryModeButton"
            android:text="@string/secondary_mode"
            android:textColor="@color/white"
            android:layout_margin="16dp"
            android:onClick="onClickButton"
            android:tag="@string/secondary_mode"
            android:theme="@style/MyButtonBlue" />

    </LinearLayout>

</LinearLayout>
